--- a/core/new-gui/src/app/workspace/component/codearea-custom-template/codearea-custom-template.component.html
+++ b/core/new-gui/src/app/workspace/component/codearea-custom-template/codearea-custom-template.component.html
@@ -10,3 +10,5 @@
     <div *ngIf="readonly">View code content</div>
   </button>
 </div>
+
+<ng-container *ngComponentOutlet="editorComponent;"></ng-container>
