--- a/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.html
@@ -1,5 +1,5 @@
 <div id="workflow-editor-wrapper">
-    <div id="workflow-editor" (contextmenu)="contextMenu($event, menu)"></div>
+    <div id="workflow-editor" (contextmenu)="nzContextMenu.create($event, menu)"></div>
 </div>
 
 <nz-dropdown-menu
