--- a/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.scss
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.scss
@@ -1,7 +1,6 @@
 #workflow-editor-wrapper {
-  overflow: hidden;
+  position: relative;
   height: 100%;
-  position: relative; width: 100%;
 }
 
 #workflow-editor {
