--- a/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.scss
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/workflow-editor.component.scss
@@ -1,9 +1,9 @@
 #workflow-editor-wrapper {
-  position: relative;
   height: 100%;
 }
 
 #workflow-editor {
+  height: 100%;
   background-color: #f6f6f6;
 }
 
