--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -119,11 +119,14 @@ texera-menu {
   grid-row: 5/6;
   overflow: auto;
   transition: height 1s;
+  z-index: 1;
+  background: white;
 }
 
 .texera-result-panel-toggle-grid-container {
   grid-column: 1/3;
   grid-row: 4/5;
+  z-index: 1;
 }
 
 #git-commit-id {
