--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.html
@@ -1,2 +1,8 @@
 <div id="mini-map"></div>
-<div id="mini-map-navigator"></div>
+<div
+  id="mini-map-navigator"
+  cdkDrag
+  cdkDragBoundary="texera-mini-map"
+  (cdkDragMoved)="onDrag($event)"
+  (cdkDragStarted)="dragging=true"
+  (cdkDragEnded)="dragging=false"></div>
