--- a/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.scss
+++ b/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.scss
@@ -1,9 +1,8 @@
 #code-editor-container {
-  position: absolute;
-  z-index: 3;
-  background: #333333;
-  left:10px;
+  position: fixed;
+  left: 10px;
   top: 10px;
+  z-index: 3;
   resize: both;
   overflow: hidden;
   width: 60vw;
@@ -12,31 +11,17 @@
   min-height: 240px;
 }
 
-
-[mat-dialog-title] {
+#title {
   background: #333333;
   color: #fff;
   text-align: center;
+  margin: 0;
+  padding: 10px;
 }
 
-.code-editor {
+#code-editor {
   width: 100%;
   height: 100%;
-}
-
-.close-button {
-  height: 30px !important;
-  width: 30px !important;
-  background-color: lightslategrey;
-  float: right;
-  top: 5px;
-  right: 10px;
-}
-
-.close-icon {
-  margin-bottom: 11px;
-  color: white;
-  transition: 1s ease-in-out;
 }
 
 ::ng-deep .yRemoteSelectionHead {
