--- a/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.html
@@ -5,7 +5,7 @@
     Python Script
     <button nz-button nzType="text" nzSize="large" nzShape="circle" id="close-button"><span nz-icon nzType="close"></span></button>
   </h5>
-  <div id="code-editor"></div>a
+  <div #editor id="code-editor"></div>a
   <ng-container *ngFor="let user of coeditorPresenceService.coeditors">
     <div [innerHTML]="this.getCoeditorCursorStyles(user)"></div>
   </ng-container>
