--- a/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.html
@@ -3,7 +3,7 @@
      cdkDragBoundary="texera-workspace">
   <h5 id="title" cdkDragHandle>
     Python Script
-    <button nz-button nzType="text" nzSize="large" nzShape="circle" id="close-button"><span nz-icon nzType="close"></span></button>
+    <button nz-button nzType="text" nzSize="large" nzShape="circle" id="close-button" (click)="componentRef?.destroy()"><span nz-icon nzType="close"></span></button>
   </h5>
   <div #editor id="code-editor"></div>a
   <ng-container *ngFor="let user of coeditorPresenceService.coeditors">
