--- a/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.html
@@ -1,9 +1,11 @@
 <div
   id="code-editor-container"
   cdkDrag
-  cdkDragBoundary="texera-workspace">
+  cdkDragBoundary="texera-workspace"
+  (focusin)="onFocus()">
   <h5
     id="title"
+    (focus)="onFocus()"
     cdkDragHandle>
     Python Script
     <button
