change close to minus

--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
@@ -21,7 +21,7 @@
         *ngIf="this.width">
         <span
           nz-icon
-          nzType="close"></span>
+          nzType="minus"></span>
       </li>
       <li
         nz-menu-item
