--- a/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.html
+++ b/core/new-gui/src/app/workspace/component/code-editor-dialog/code-editor.component.html
@@ -7,7 +7,7 @@
     id="title"
     (focus)="onFocus()"
     cdkDragHandle>
-    Python Script
+    Python Script: {{ title }}
     <button
       nz-button
       nzType="text"
