--- a/core/new-gui/src/app/dashboard/user/component/user-file/user-file-list-item/user-file-list-item.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-file/user-file-list-item/user-file-list-item.component.html
@@ -45,16 +45,14 @@
         <i
           *ngIf="entry.file.ownerUid === uid"
           class="file-is-owner-icon"
-          nz-tooltip
-          nzTooltipTitle="You are the OWNER"
+          nz-tooltip="You are the OWNER"
           nzTooltipPlacement="bottom"
           nz-icon
           nzTheme="outline"
           nzType="user"></i>
         <i
           *ngIf="entry.file.ownerUid !== uid"
-          nz-tooltip
-          nzTooltipTitle="Access shared by {{ entry.ownerEmail }}"
+          nz-tooltip="Access shared by {{ entry.ownerEmail }}"
           nzTooltipPlacement="bottom"
           nz-icon
           nzTheme="outline"
