--- a/core/new-gui/src/app/workspace/component/property-editor/operator-property-edit-frame/operator-property-edit-frame.component.html
+++ b/core/new-gui/src/app/workspace/component/property-editor/operator-property-edit-frame/operator-property-edit-frame.component.html
@@ -73,7 +73,7 @@
   [nzLayout]="'vertical'"
   *ngIf="formlyFields && formlyFormGroup"
   [formGroup]="formlyFormGroup"
-  class="texera-workspace-property-editor-form">
+  class="property-editor-form">
   <formly-form
     (modelChange)="onFormChanges($event)"
     [fields]="formlyFields"
@@ -94,7 +94,7 @@
 			ExecutionState.Paused ||
 			this.executeWorkflowService.getExecutionState().state ===
 				ExecutionState.BreakpointTriggered) &&
-		this.interactive === false"
+		!this.interactive"
   nz-button
   nz-tooltip="Unlock the operator to change logic"
   nzTooltipPlacement="bottom"
@@ -117,7 +117,7 @@
 			ExecutionState.Paused ||
 			this.executeWorkflowService.getExecutionState().state ===
 				ExecutionState.BreakpointTriggered) &&
-		this.interactive === true"
+		this.interactive"
   nz-button
   nz-tooltip="Confirm change and modify the operator runtime"
   nzTooltipPlacement="bottom">
