--- a/core/new-gui/src/app/workspace/component/property-editor/operator-property-edit-frame/operator-property-edit-frame.component.scss
+++ b/core/new-gui/src/app/workspace/component/property-editor/operator-property-edit-frame/operator-property-edit-frame.component.scss
@@ -24,11 +24,14 @@
 
 ::ng-deep {
   // overwrite the color of the Formly error message box
-  .texera-workspace-property-editor-form {
+  .property-editor-form {
     [role="alert"] {
       color: #856404;
       background-color: #fff3cd;
       border-color: #ffeeba;
+    }
+    nz-input-number{
+      width: 100%;
     }
   }
 }
