--- a/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-explorer/user-dataset-file-renderer/user-dataset-file-renderer.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-dataset/user-dataset-explorer/user-dataset-file-renderer/user-dataset-file-renderer.component.html
@@ -3,7 +3,9 @@
                                 {'padding-top': '15px', 'margin-left': '30px', 'width': '100%', 'height': '100%', 'overflow-y': 'scroll'}">
   <div class="file-display-area">
     <div *ngIf="isLoading">
-      <nz-spin nzSimple [nzSize]="'large'"></nz-spin>
+      <nz-spin
+        nzSimple
+        [nzSize]="'large'"></nz-spin>
     </div>
     <pdf-viewer
       *ngIf="displayPdf && fileURL"
