minimap initial debug result

--- a/core/new-gui/src/app/workspace/component/workspace.component.html
+++ b/core/new-gui/src/app/workspace/component/workspace.component.html
@@ -25,7 +25,9 @@
         cdkDragHandle>
         {{currentRightPanelTitle}}
       </h6>
-      <ng-container *ngComponentOutlet="currentRightPanelComponent"></ng-container>
+      <div [class]="getCurrentComponent()">
+        <ng-container *ngComponentOutlet="currentRightPanelComponent"></ng-container>
+      </div>
     </div>
     <ul 
       nz-menu 
