--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -113,6 +113,9 @@ texera-menu {
   padding-bottom: 10px;
 }
 
+.MiniMap {
+  position: relative;
+}
 
 /**
   * this style specifies that the property editor for the operators
