--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -9,6 +9,11 @@
   height: 100%;
 }
 
+.disabled {
+  pointer-events: none; /* disable click */
+  color: #ccc; /* change color to inform */
+}
+
 .texera-workspace {
   --header-height: 40px;
   --resultbar-height: 25px;
