--- a/core/new-gui/src/styles.scss
+++ b/core/new-gui/src/styles.scss
@@ -55,15 +55,19 @@ blockquote {
 }
 
 .ant-select-selector {
-  height: 24px!important;
+  height: 24px !important;
 }
 
 .ant-select-selection-item {
-  line-height: 24px!important;
+  line-height: 24px !important;
 }
 
 .ant-form-item-label {
-  padding-bottom: 0!important;
+  padding-bottom: 0 !important;
 }
 
-hr { background-color: #D3D3D3; height: 1px; border: 0; }
+hr {
+  background-color: #d3d3d3;
+  height: 1px;
+  border: 0;
+}
