--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -102,7 +102,7 @@ texera-menu {
 
 #mini-map-container {
   position: fixed;
-  bottom: 30px;
+  top: 200px;
   right: 0px;
   width: 50%;
   z-index: 3;
