--- a/core/new-gui/src/app/dashboard/user/component/search-results/search-results.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/search-results/search-results.component.html
@@ -54,7 +54,8 @@
           <nz-content>
             <texera-user-file-list-item
               [editable]="editable"
-              [entry]="entry.file">
+              [entry]="entry.file"
+              [uid]="uid">
             </texera-user-file-list-item> </nz-content
         ></nz-layout>
       </ng-container>
