--- a/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/mini-map/mini-map.component.scss
@@ -8,3 +8,31 @@
   cursor: move;
   z-index: 1;
 }
+
+#mini-map-container {
+  position: fixed;
+  top: 200px;
+  right: 0px;
+  width: 50%;
+  z-index: 3;
+  user-select: none;
+  background: white;
+  border-radius: 3px;
+}
+
+#mini-map-content {
+  min-height: 100%;
+  max-height: calc(100vh - 200px);
+  display: inline-block;
+  width: calc(100% - 47px);
+}
+
+#title {
+  padding: 10px 0 4px 15px;
+}
+
+#dock {
+  display: inline-block;
+  vertical-align: top;
+  padding-bottom: 10px;
+}
