--- a/core/new-gui/src/app/workspace/component/workspace.component.html
+++ b/core/new-gui/src/app/workspace/component/workspace.component.html
@@ -9,7 +9,9 @@
 <texera-left-panel></texera-left-panel>
 <span id="git-commit-id">Version 0.5.3 <br />Git hash: {{ gitCommitHash }}</span>
 <ng-template #codeEditor></ng-template>
-<div
+
+<texera-property-editor></texera-property-editor>
+<!-- <div
   cdkDrag
   id="property-editor-container"
   nz-resizable
@@ -55,14 +57,16 @@
         <span
           nz-icon
           nzType="form"
-          nzTheme="outline" 
+          nzTheme="outline"
           class="icon-right"></span>
       </li>
     </ul>
     <nz-resize-handles [nzDirections]="['left']"></nz-resize-handles>
-</div>
+</div> -->
 
-<div
+<texera-mini-map></texera-mini-map>
+
+<!-- <div
   cdkDrag
   id="mini-map-container"
   [style.width.px]="miniMapWidth">
@@ -104,11 +108,11 @@
         <span
           nz-icon
           nzType="compass"
-          nzTheme="outline" 
+          nzTheme="outline"
           class="icon-right"></span>
       </li>
     </ul>
-</div>
+</div> -->
 <texera-workflow-editor class="texera-workflow-editor-grid-container grid-container"></texera-workflow-editor>
 <texera-result-panel-toggle class="texera-result-panel-toggle-grid-container"></texera-result-panel-toggle>
 <texera-result-panel class="texera-result-panel-grid-container grid-container"></texera-result-panel>
