--- a/core/new-gui/src/app/dashboard/user/component/search-results/search-results.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/search-results/search-results.component.html
@@ -55,7 +55,7 @@
             <texera-user-file-list-item
               [editable]="editable"
               [entry]="entry.file"
-              [uid]="uid">
+              [uid]="getUid()">
             </texera-user-file-list-item> </nz-content
         ></nz-layout>
       </ng-container>
