pass the frontend compilation

--- a/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
@@ -51,6 +51,18 @@
 
       <li
         nz-menu-item
+        nz-tooltip="Look up for datasets"
+        nzMatchRouter="true"
+        nzTooltipPlacement="right"
+        routerLink="/dashboard/dataset">
+        <span
+          nz-icon
+          nzType="database"></span>
+        <span>Datasets</span>
+      </li>
+
+      <li
+        nz-menu-item
         nz-tooltip="Search across the entire site"
         nzMatchRouter="true"
         nzTooltipPlacement="right"
