--- a/core/new-gui/src/app/workspace/component/input-autocomplete/input-autocomplete.component.html
+++ b/core/new-gui/src/app/workspace/component/input-autocomplete/input-autocomplete.component.html
@@ -4,7 +4,7 @@
   nz-input
   required
   [nzAutocomplete]="auto"
-  [formControl]="formControl"
+  [formControl]="props.formControl"
   [formlyAttributes]="field" />
 <div
   class="alert alert-danger"
